--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,67 @@
 button {
   cursor: pointer;
 }
+
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.container {
+  max-width: 1350px;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: #008080;
+  height: 100px;
+}
+nav .container .row {
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .container .row .brand .brand-text {
+  color: #fff;
+  font-size: 40px;
+}
+nav .container .row ul {
+  display: flex;
+  gap: 8px;
+}
+nav .container .row ul li {
+  padding: 10px 16px;
+  border-radius: 2px;
+}
+nav .container .row ul li:hover {
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+}
+nav .container .row ul li a {
+  font-size: 18px;
+  color: #fff;
+  font-weight: bold;
+}
+
+section.hero {
+  padding: 3.5rem 0;
+}
+section.hero .container .row {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 3rem;
+  align-items: center;
+}
+section.hero .container .row .left-column .heading {
+  font-size: 48px;
+  line-height: 56px;
+  margin-bottom: 8px;
+}
+section.hero .container .row .left-column .subheading {
+  font-size: 30px;
+  line-height: 36px;
+}
+section.hero .container .row .right-column img {
+  width: 100%;
+  border-radius: 6px;
+}
