--- a/css/style.scss
+++ b/css/style.scss
@@ -10,3 +10,85 @@
 button {
   cursor: pointer;
 }
+
+html {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.container {
+  max-width: 1350px;
+  padding: 0 1rem;
+  margin: 0 auto;
+}
+
+nav {
+  background-color: #008080;
+  height: 100px;
+
+  .container {
+    .row {
+      height: 100px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      .brand {
+        .brand-text {
+          color: #fff;
+          font-size: 40px;
+        }
+      }
+
+      ul {
+        display: flex;
+        gap: 8px;
+
+        li {
+          &:hover{
+            box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+            // font-size: 110%;
+          }
+          // box-shadow: 0 2px 2px #66666666;
+          padding: 10px 16px;
+          border-radius: 2px;
+          a {
+            font-size: 18px;
+            color: #fff;
+            font-weight: bold;
+          }
+        }
+      }
+    }
+  }
+}
+
+section.hero {
+  padding: 3.5rem 0;
+
+  .container {
+    .row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 3rem;
+      align-items: center;
+      .left-column{
+        .heading{
+          font-size: 48px;
+          line-height: 56px;
+          margin-bottom: 8px;
+        }
+        .subheading{
+          font-size: 30px;
+          line-height: 36px;
+        }
+      }
+      .right-column {
+        img {
+          width: 100%;
+          border-radius: 6px;
+
+        }
+      }
+    }
+  }
+
+}
